--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.17.1",
+    "axios": "^1.7.7",
     "clarifai-nodejs-grpc": "^10.8.4",
     "lucide-react": "^0.439.0",
     "next": "14.2.8",
     "openai": "^4.58.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "recharts": "^2.12.7"
   },
   "devDependencies": {
     "@types/node": "^20",
